# PadeOps

./: .README.md.swp  .gitignore  .travis.yml  :w  CMakeLists.txt  README.md  SetupEnv.sh  bashrc.sh  certainty_long.pbs  jacobnotes.F90  lk  stderr  stdout  toDo.txt
postProcessing/: CMakeLists.txt  shearlessMixing_Bodart_totalKE.F90
problems/: CMakeCache.txt  CMakeLists.txt  Makefile  ShuOsher.F90  StiffShock.F90  burgers.F90  cmake_install.cmake  hitCD10.F90  hitSpectral.F90  plot_ShuOsher.py  plot_shocktube.py  shocktube.F90  taylorgreen.F90  test_Delete.F90
problems/compressible/: AirHel_shock.F90  CHIT.F90  CMakeLists.txt  Makefile  NCtemplate.F90  RTNCfinal.F90  ShearLayer.F90  ShearLayer1Mat.F90  ShearLayer_sCO2.F90  ShearLayer_seed.F90  VDHIT.F90  channel.F90  channel_cvl.F90  cmake_install.cmake  inclinedRM.F90  jet.F90  planarRM.F90  rayleightaylor.F90  rayleightaylor1.F90  shock_vortex.F90  shocktube.F90  shuosher.F90  speciesAdvection.F90  species_shocktube.F90  taylorgreen.F90  vortex_advection_cvl.F90  vortexring.F90  vortexring_cvl.F90
problems/gabor/: CMakeLists.txt  ToDo  hitEnrich.F90  hitEnrichTest.F90  hitMultiScale.F90  landingGear.F90  turbHalfChannel.F90  turbHalfChannelV2.F90
problems/hitModules/: hitCD10_IO.F90  hitCD10_RHS.F90  hitCD10_timestep.F90  initialization.F90  inputReadOrder.F90  io.F90  poisson.F90  spectralOps.F90  timestep.F90
problems/incompressible/: CMakeLists.txt  ChangeFrameSpeedHIT.F90  ChannelGrowth.F90  EkmanBL.F90  EkmanDNS.F90  EkmanLayerDNS.F90  EkmanLayerGrowth.F90  HIT_Periodic_moving.F90  HelmholtzDecomposition.F90  Makefile  MixedConvection.F90  PressureSplitRapidSlow.F90  RBP.F90  ScalarFieldTesting.F90  ScalarSourceTesting.F90  ScaleSplittingPeriodic.F90  StratifiedShearLayer.F90  StratifiedShearLayerBudgets.F90  StratifiedShearLayerCenterline.F90  StratifiedShearLayerDomainIntegrals.F90  StratifiedShearLayerPotentialEnergy.F90  TODO.txt  TaylorGreenDNS.F90  TaylorGreenPeriodic.F90  TimeAvgField.F90  TimeAvgVort.F90  arbitrary_igrid_problem.F90  channel.F90  channelDNS.F90  check_SGS_HIT.F90  cmake_install.cmake  convective_igrid.F90  convertViz2Restart.F90  convert_restart_to_viz.F90  createHITrestart.F90  createPBLrestart.F90  diurnal.F90  diurnal_concurrent.F90  diurnal_concurrent_fail.F90  duplicateFields.F90  (+29 more)
problems/me451b/: CMakeLists.txt  EkmanLayerGrowth.F90
problems/postprocessing/: CMakeLists.txt  IRM_scaledecomp.F90  IRM_vorticity.F90  JHU_channel_dumpPlanes.F90  JHU_channel_postprocess.F90  JHU_channel_readRawData.F90  Makefile  cmake_install.cmake  inclinedRM_TKEBudget.F90
problems/postprocessing_igrid/: CMakeLists.txt  Cebeci_Smith_RANS.F90  CoriolisBudget.F90  EkmanLayerDNSDomainIntegrals.F90  EkmanLayerDNSMKEBudget.F90  EkmanLayerDNSMomentumBalance.F90  EkmanLayerDNSRijBudget.F90  EkmanLayerDNSTKEBudget.F90  EkmanLayerDNSTurbStats.F90  EkmanLayerDNSTurbStats_old.F90  EkmanLayerDNSVorticity.F90  HIT_AD_dumpRapidSlowPressure.F90  HIT_AD_get3Dmeans.F90  HIT_AD_getRapidSlowPressure.F90  KS_preprocess_dev.F90  StratifiedShearLayerDomainIntegrals.F90  StratifiedShearLayerDumpEpsPlanes.F90  StratifiedShearLayerDumpEpsilon.F90  StratifiedShearLayerDumpWPV.F90  StratifiedShearLayerMakeMeans.F90  StratifiedShearLayerPotentialEnstrophy.F90  StratifiedShearLayerProfiles.F90  StratifiedShearLayerQcrit.F90  StratifiedShearLayerTKE23D.F90  StratifiedShearLayerTurbStats.F90  StratifiedShearLayerWPV.F90  getEnergyBudgetTerms.F90  getTKEbudgetTerms.F90  getTurbineAndSGSrhs.F90  getWakeCenterLine.F90  half_channel_filter.F90  shearlessMixing_Bodart_ddt_tke.F90  shearlessMixing_Bodart_totalKE.F90  test_WPVdecomposition.F90
problems/solids/: Advection.F90  AirHeliumRiemann.F90  AirHelium_shock.F90  AirWater_shock.F90  Bullet.F90  CMakeLists.txt  CapillaryWave.F90  CavityCollapse1D.F90  CavityCollapse_shock.F90  ContactDiscont.F90  CylNoh.F90  DerTest.F90  DoubleLayer.F90  Droplet.F90  Droplet_Shear.F90  Droplet_Shear_Compressible.F90  Droplet_Shear_Incompressible.F90  EntrAdvec.F90  HeliumAir_shock.F90  Impact_groove.F90  Laplace.F90  Laplace_Translate.F90  LiqGasInt_shock.F90  LiqGas_shock.F90  LiqGuess_shock.F90  LiqOnly_shock.F90  LiqPhase_shock.F90  Makefile  ManufacturedSolution.F90  ManufacturedSolutionPlastic.F90  MultSpecGauss.F90  MultSpecWilkins.F90  MultiphaseAdvection.F90  MultiphaseAdvectionCoarse.F90  MultiphaseCavityCollapse_shock.F90  MultiphaseFluid_shock.F90  MultiphaseRT.F90  Multiphase_shock.F90  Multispecies.F90  Multispecies_2Dshock.F90  (+65 more)
problems/src/: Makefile  cmake_install.cmake
problems/turbines/: AD_Coriolis.F90  AD_coriolis_shear.F90  CMakeLists.txt  HIT_AD_interact.F90  concurrentSimulation.F90  concurrentSimulationMult.F90  getEnergyBudgetTerms.F90  getMomentumBudgetTerms.F90  getTKEbudgetTerms.F90  getTurbineAndSGSrhs.F90  isolatedTurbine.F90  neutral_pbl_concurrent.F90  pblwt.F90
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/compressible/: .cgrid.F90.swo  .nfs00000001130baddc00000366  EOS.F90  EOS_Real.F90  IdealGasEOS.F90  LADMod.F90  MixtureEOS.F90  MixtureEOS_Real.F90  PowerLawViscosity.F90  RealGasEOS.F90  ScaleDecomposition.F90  TKEBudget.F90  cgrid.F90  cgrid_NC.F90  cvlgrid.F90  cvlhooks_interface.F90  hooks_interface.F90  sgsmod_cgrid.F90  statistics.F90
src/io/: io.F90  (+4 more)
tests/: :w  CMakeLists.txt  Makefile  PentaSolver.F90  TriSolver.F90  \  burgers.F90  cleanup.sh  cmake_install.cmake  compile_test_VTK.sh  compile_tests.sh  penta.f  shitPentaSolver.F90  test_2D_transpose.F90  test_2dFFT.F90  test_BEMTheory.F90  test_CD06_Projection.F90  test_CHEB.F90  test_D06.F90  test_D10.F90  test_Derivatives2ndOrder.F90  test_EulerG.F90  test_FOUR.F90  test_HIT_init.F90  test_HITforcing.F90  test_HITforcingMultipleInputs.F90  test_HITforcingV2.F90  test_HITforcing_variableXapsectRatio.F90  test_Interp2ndOrder.F90  test_KS_inflow.F90  test_LU06.F90  test_LU10.F90  test_MPI_CART_COMM.F90  test_Miranda_reader.F90  test_Miranda_restart.F90  test_Mix_scaledecomp.F90  test_NewtonSolver.F90  test_Pade6ops_igrid.F90  test_PadeDer_periodic.F90  test_PadePoisson_NeumannBCs.F90  (+119 more)
(+1235 files in other folders)
